Revert "Fix issue with divs in image-grid not being properly aligned"
This reverts commit 12f6f65211e6a5ff65862beb300c5c8aebc02ee5.

--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ footer {
 	'main main main'
 	'rel1 rel2 rel3';
 }
-.image-grid div {
+.image-grid article {
 	grid-area: main;
 	display: flex;
 	flex-direction: column;
